fix external links in case 15

--- a/casestudies/15/casestudy/www/layout/case_id_15_id_161_pid_0.html
+++ b/casestudies/15/casestudy/www/layout/case_id_15_id_161_pid_0.html
@@ -290,14 +290,14 @@ font-style:italic;
 <h3>
 	Declining readership</h3>
 <p>
-	<span class="inline none"><img alt="" border="0" class="image _original" height="323" src="https://casestudies.jrn.columbia.edu/site/timesunion/sites/files/timesunion/images/declining_readers.gif" width="400" /></span><br />
+	<span class="inline none"><img alt="" border="0" class="image _original" height="323" src="../../files/timesunion/images/declining_readers.gif" width="400" /></span><br />
 	<span class="sourcescite"><strong>Source:</strong> General Social Survey, National Opinion Research Center, University of Chicago. Graph by Philip Meyer</span></p>
 <p>
 	Nationwide, newspapers experienced their worst years in 2000-2002. The boom of the Internet economy in the late 1990s meant newspapers had enjoyed healthy advertising revenue, fueled by start-up companies which paid for classified ads to find employees and spent large advertising budgets in print mediums. But when the &quot;dot.com bubble&quot;&mdash;the Internet economy&mdash;collapsed at the beginning of the 21st century, those technology companies drastically curtailed advertising, and newspapers lost a source of revenue that had counterbalanced the losses from declining subscriptions. Advertising revenue dropped over 9 percent between 2000 and 2002, representing an historic $5 billion loss to the newspaper industry. The hardest hit area was help-wanted ads, which dropped by half in the same period.<sup><a name="txtfn7" title="txtfn7"></a><a href="case_id_15_id_161_pid_0.html#fn7">[7]</a></sup></p>
 <h3>
 	Change in advertising revenue</h3>
 <p>
-	<span class="inline none"><img alt="" border="0" class="image _original" height="287" src="https://casestudies.jrn.columbia.edu/site/timesunion/sites/files/timesunion/images/Advertising-revenue-change.gif" width="450" /></span></p>
+	<span class="inline none"><img alt="" border="0" class="image _original" height="287" src="../../files/timesunion/images/Advertising-revenue-change.gif" width="450" /></span></p>
 <p>
 	The Web, meanwhile, did not seem capable of helping newspapers replace their shrinking revenues from the print product. While the surge in traffic to news websites after the terrorist attacks of September 11, 2001, proved the Internet to be a popular and valid news medium, no one had figured out how to make newspaper websites profitable. Some newspapers tried asking readers to pay for news online, but most ended the approach when readers migrated to free news sites instead. Some advertisers considered shifting their advertising to newspapers&#39; websites, but few were willing to pay much for online ads without a clear understanding of how many potential customers these ads would reach or what impact they would have. For a time, it looked as if the dire future predicted by <a class="extlink" href="http://idorosen.com/mirrors/robinsloan.com/epic/ols-master.html" target="_blank">EPIC 2014</a>&mdash;a fictional newsreel in which Google, Amazon, and an army of amateurs eventually drive out even the <em>New York Times</em>&mdash;was not so far-fetched.</p>
 <div class="footnotesblock">
