fix external links in case 16

--- a/casestudies/16/casestudy/www/layout/case_id_16_id_186_pid_178.html
+++ b/casestudies/16/casestudy/www/layout/case_id_16_id_186_pid_178.html
@@ -321,11 +321,11 @@ font-style:italic;
 <table width="526" height="313" cellspacing="0" cellpadding="0" border="0" class="imagetable">
     <tbody>
         <tr valign="top">
-            <td width="250" align="left"><span class="inline"><img width="250" height="277" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/declinewage1.jpg" /></span>
+            <td width="250" align="left"><span class="inline"><img width="250" height="277" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/declinewage1.jpg" /></span>
             <p><span style="width: 250px;" class="sourcescite"><strong>Source:</strong> United States Census, via Michael Mandel, &ldquo;The Continuing Decline in College Wages,&rdquo; Economics Unbound, BusinessWeek Weblog, September 1, 2005.</span></p>
             </td>
             <td width="40">&nbsp;</td>
-            <td width="250" align="left"><span class="inline"><img width="250" height="277" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/declinewage2.jpg" /></span>
+            <td width="250" align="left"><span class="inline"><img width="250" height="277" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/declinewage2.jpg" /></span>
             <p><span class="sourcescite"><strong>Source:</strong> United States Census, via Michael Mandel, &ldquo;Young College Grads in Free Fall,&rdquo; Economics Unbound, BusinessWeek Weblog, August 29, 2006.</span></p>
             </td>
         </tr>
