--- a/casestudies/16/casestudy/www/layout/case_id_16_id_190.html
+++ b/casestudies/16/casestudy/www/layout/case_id_16_id_190.html
@@ -294,15 +294,15 @@ font-style:italic;
 <table cellspacing="0" cellpadding="0" border="0" class="evolvinglayout">
     <tbody>
         <tr valign="middle">
-            <td align="left"><img width="249" height="160" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/empty_double.jpg" /></td>
-            <td align="right"><img width="249" height="160" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/empty_double.jpg" /></td>
+            <td align="left"><img width="249" height="160" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/empty_double.jpg" /></td>
+            <td align="right"><img width="249" height="160" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/empty_double.jpg" /></td>
         </tr>
         <tr valign="middle">
-            <td align="left"><img width="249" height="160" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/empty_double.jpg" /></td>
-            <td align="right"><img width="249" height="160" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/empty_double.jpg" /></td>
+            <td align="left"><img width="249" height="160" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/empty_double.jpg" /></td>
+            <td align="right"><img width="249" height="160" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/empty_double.jpg" /></td>
         </tr>
         <tr valign="middle">
-            <td align="center" colspan="2"><img width="249" height="160" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/empty_double.jpg" /></td>
+            <td align="center" colspan="2"><img width="249" height="160" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/empty_double.jpg" /></td>
         </tr>
     </tbody>
 </table>
