--- a/casestudies/16/casestudy/www/layout/case_id_16_id_194.html
+++ b/casestudies/16/casestudy/www/layout/case_id_16_id_194.html
@@ -297,16 +297,16 @@ font-style:italic;
 <table cellspacing="0" cellpadding="0" border="0" class="evolvinglayout">
     <tbody>
         <tr valign="middle">
-            <td align="left"><img width="249" height="160" border="0" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/intro_gibbs.jpg" class="image _original" alt="" /></td>
-            <td align="right"><img width="249" height="160" border="0" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/demographics_adams.jpg" class="image _original" alt="" /></td>
+            <td align="left"><img width="249" height="160" border="0" src="../../files/TimeMagazine/images/intro_gibbs.jpg" class="image _original" alt="" /></td>
+            <td align="right"><img width="249" height="160" border="0" src="../../files/TimeMagazine/images/demographics_adams.jpg" class="image _original" alt="" /></td>
         </tr>
         <tr valign="middle">
-            <td align="left"><img width="249" height="160" border="0" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/religion_dykman.jpg" class="image _original" alt="" /></td>
-            <td align="right"><img width="249" height="160" border="0" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/income_caplan_0.jpg" class="image _original" alt="" /></td>
+            <td align="left"><img width="249" height="160" border="0" src="../../files/TimeMagazine/images/religion_dykman.jpg" class="image _original" alt="" /></td>
+            <td align="right"><img width="249" height="160" border="0" src="../../files/TimeMagazine/images/income_caplan_0.jpg" class="image _original" alt="" /></td>
         </tr>
         <tr valign="middle">
-            <td align="left"><img width="249" height="160" border="0" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/timeuse_masters_1.jpg" class="image _original" alt="" /></td>
-            <td align="right"><img width="249" height="160" border="0" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/consumption_dell.jpg" class="image _original" alt="" /></td>
+            <td align="left"><img width="249" height="160" border="0" src="../../files/TimeMagazine/images/timeuse_masters_1.jpg" class="image _original" alt="" /></td>
+            <td align="right"><img width="249" height="160" border="0" src="../../files/TimeMagazine/images/consumption_dell.jpg" class="image _original" alt="" /></td>
         </tr>
     </tbody>
 </table>
