--- a/casestudies/16/casestudy/www/layout/case_id_16_id_191.html
+++ b/casestudies/16/casestudy/www/layout/case_id_16_id_191.html
@@ -302,16 +302,16 @@ font-style:italic;
 <table cellspacing="0" cellpadding="0" border="0" class="evolvinglayout">
     <tbody>
         <tr valign="middle">
-            <td align="left"><img width="249" height="160" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/intro.jpg" /></td>
-            <td align="right"><img width="249" height="160" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/demographics.jpg" /></td>
+            <td align="left"><img width="249" height="160" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/intro.jpg" /></td>
+            <td align="right"><img width="249" height="160" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/demographics.jpg" /></td>
         </tr>
         <tr valign="middle">
-            <td align="left"><img width="249" height="160" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/religion.jpg" /></td>
-            <td align="right"><img width="249" height="160" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/income.jpg" /></td>
+            <td align="left"><img width="249" height="160" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/religion.jpg" /></td>
+            <td align="right"><img width="249" height="160" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/income.jpg" /></td>
         </tr>
         <tr valign="middle">
-            <td align="left"><img width="249" height="160" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/timeuse.jpg" /></td>
-            <td align="right"><img width="249" height="160" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/consumption.jpg" /></td>
+            <td align="left"><img width="249" height="160" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/timeuse.jpg" /></td>
+            <td align="right"><img width="249" height="160" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/consumption.jpg" /></td>
         </tr>
     </tbody>
 </table>
