--- a/casestudies/16/casestudy/www/layout/case_id_16_id_192_pid_0.html
+++ b/casestudies/16/casestudy/www/layout/case_id_16_id_192_pid_0.html
@@ -296,16 +296,16 @@ font-style:italic;
 <table cellspacing="0" cellpadding="0" border="0" class="evolvinglayout">
     <tbody>
         <tr valign="middle">
-            <td align="left"><img width="249" height="160" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/intro_gibbs.jpg" /></td>
-            <td align="right"><img width="249" height="160" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/demographics_adams.jpg" /></td>
+            <td align="left"><img width="249" height="160" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/intro_gibbs.jpg" /></td>
+            <td align="right"><img width="249" height="160" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/demographics_adams.jpg" /></td>
         </tr>
         <tr valign="middle">
-            <td align="left"><img width="249" height="160" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/religion_dykman.jpg" /></td>
-            <td align="right"><img width="249" height="160" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/income_caplan_0.jpg" /></td>
+            <td align="left"><img width="249" height="160" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/religion_dykman.jpg" /></td>
+            <td align="right"><img width="249" height="160" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/income_caplan_0.jpg" /></td>
         </tr>
         <tr valign="middle">
-            <td align="left"><img width="249" height="160" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/timeuse_masters.jpg" /></td>
-            <td align="right"><img width="249" height="160" border="0" alt="" class="image _original" src="https://casestudies.jrn.columbia.edu/site/TimeMagazine/sites/files/TimeMagazine/images/consumption_dell.jpg" /></td>
+            <td align="left"><img width="249" height="160" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/timeuse_masters.jpg" /></td>
+            <td align="right"><img width="249" height="160" border="0" alt="" class="image _original" src="../../files/TimeMagazine/images/consumption_dell.jpg" /></td>
         </tr>
     </tbody>
 </table></div>
