--- a/casestudies/21/casestudy/www/layout/case_id_21_id_241_pid_0.html
+++ b/casestudies/21/casestudy/www/layout/case_id_21_id_241_pid_0.html
@@ -268,7 +268,7 @@ font-style:italic;
 		
 	  <div class="node">
     <span class="taxonomy"></span>
-    <div class="content"><p><span class="inline inline-right"><img width="240" height="181" border="0" alt="" src="https://casestudies.jrn.columbia.edu/site/abcnews/sites/files/abcnews/images/Chris_cuomo.jpg" class="image image-_original" />
+    <div class="content"><p><span class="inline inline-right"><img width="240" height="181" border="0" alt="" src="../../files/abcnews/images/Chris_cuomo.jpg" class="image image-_original" />
 <p class="caption">&copy; ABC News</p>
 </span></p>
 <p>At 6 a.m. on April 19, Avram and a crew were standing in front of Duke Chapel, a dramatic building and popular backdrop for television broadcasts. Reporter Chris Cuomo was preparing to report live for &ldquo;Good Morning America.&rdquo; The team felt good about the story they were about to air. Using what they had seen of the photos, combined with other information about the case, they had created a minute-by-minute timeline of the party. Avram expected his sources to give him the photos later in the day, which would dramatically enhance the timeline story.</p>
