--- a/casestudies/24/casestudy/www/layout/case_id_24_id_286.html
+++ b/casestudies/24/casestudy/www/layout/case_id_24_id_286.html
@@ -344,7 +344,7 @@ font-style:italic;
     <span class="taxonomy"></span>
     <div class="content"><p>Within a few hours of his arrival that Saturday, Ingwerson received a call from an FBI agent. &ldquo;I&rsquo;m on my way,&rdquo; she told him. Ingwerson says, &ldquo;We didn&rsquo;t even initiate that.&rdquo;<sup><a name="txtfn13" title="txtfn13"></a><a href="case_id_24_id_286.html#fn13">[13]</a></sup> He figured someone from the State Department had notified the Bureau of Carroll&rsquo;s kidnapping.  When the FBI agent arrived, she stationed herself in his office, where Ingwerson was fielding phone calls from the news media, many of whom he knew. &ldquo;They were asking me what&rsquo;s really going on,&rdquo; he says. He told them the details. &ldquo;The FBI agent was wincing, saying, &lsquo;You&rsquo;re telling them too much,&rsquo;&rdquo; he says. But he disregarded her advice. At that point, Ingwerson found her unintrusive. After a few hours, she sat at another desk in the newsroom, occasionally going back to Ingwerson&rsquo;s office.<br />
 <span class="inline inline-right"><br />
-<img width="80" height="80" src="https://casestudies.jrn.columbia.edu/site/csm/sites/files/csm/images/fbi_logo.jpg" alt="" /><br />
+<img width="80" height="80" src="../../files/csm/images/fbi_logo.jpg" alt="" /><br />
 <span class="caption" style="width: 80px;">FBI Seal, Courtesy FBI.gov<br />
 </span></span><br />
 Her arrival was not unusual. Kidnappings of US citizens abroad triggered the involvement of various federal agencies: the FBI, CIA, State Department, and others as relevant. In high-profile cases, such as Daniel Pearl, pleas for the release of a hostage might be raised at the highest levels of government, between presidents or ministers.</p>
