--- a/casestudies/24/casestudy/www/layout/case_id_24_id_284_pid_0.html
+++ b/casestudies/24/casestudy/www/layout/case_id_24_id_284_pid_0.html
@@ -344,11 +344,11 @@ font-style:italic;
     <span class="taxonomy"></span>
     <div class="content"><p>Once in the office by about 5 a.m., Ingwerson and Scott reviewed the situation. The <i>Monitor&rsquo;s</i> two full-time Middle East correspondents were Scott Peterson and Dan Murphy, known in the newsroom as the &ldquo;Baghdad Boys.&rdquo; Typically, the two rotated in and out of Baghdad for four to six weeks at a time. But neither was in Iraq at the moment. They had returned to their home bases in Istanbul and Cairo respectively just before Christmas, leaving Carroll in charge.<br />
 <span class="inline inline-right"><br />
-<img width="80" height="80" alt="" src="https://casestudies.jrn.columbia.edu/site/csm/sites/files/csm/images/dan_murphy.jpg" /><br />
+<img width="80" height="80" alt="" src="../../files/csm/images/dan_murphy.jpg" /><br />
 <span style="width: 80px;" class="caption">Dan Murphy<br />
 &copy; <i>Christian Science Monitor</i> </span></span><br />
 <span class="inline inline-left"><br />
-<img width="80" height="80" alt="" src="https://casestudies.jrn.columbia.edu/site/csm/sites/files/csm/images/scott_peterson.jpg" /><br />
+<img width="80" height="80" alt="" src="../../files/csm/images/scott_peterson.jpg" /><br />
 <span style="width: 80px;" class="caption">Scott Peterson<br />&copy; <i>Christian Science Monitor</i>
 </span></span></p>
 <p><i><b>Stringer.</b></i> In the beginning of 2005, Carroll was hired as a &ldquo;stringer&rdquo;&mdash;someone who took on regular assignments for the <i>Monitor</i> and was paid a fee for each published story. (A contributor was another category of freelancer who had submitted less than five stories.) The <i>Monitor</i> retained some two dozen stringers around the world; in Iraq, there were two or three in addition to Carroll. Stringers tended to be young reporters hoping to win an eventual fulltime job with a news organization after proving their worth on an important story.</p>
