--- a/casestudies/24/casestudy/www/layout/case_id_24_id_285_pid_0.html
+++ b/casestudies/24/casestudy/www/layout/case_id_24_id_285_pid_0.html
@@ -347,11 +347,11 @@ font-style:italic;
 <p>So far, no US newspaper had reported Carroll&rsquo;s disappearance; television and radio were also silent. To Ingwerson&rsquo;s surprise, some of the other Baghdad-based news editors advised a news blackout to keep the kidnapping as quiet as possible. &ldquo;I had never known that newspapers did that, because it had never come up in our experience,&rdquo; Ingwerson says. But it seemed an idea worth serious consideration.</p>
 <p><i><b>Blackout?</b></i> Ingwerson and Scott weighed the pros and cons. There were distinct advantages. For one, a news blackout would stall the publication of any information about Carroll that might raise her value to her captors or make her more vulnerable. Conversely, a <i>high</i> profile might spur the kidnappers to hand Carroll over to other groups for money or get Al-Qaeda involved, if they weren&rsquo;t already, in the bidding process for ransom.<br />
 <span class="inline inline-right"><br />
-<img width="80" height="80" alt="" src="https://casestudies.jrn.columbia.edu/site/csm/sites/files/csm/images/marshall_ingwerson.jpg" /><br />
+<img width="80" height="80" alt="" src="../../files/csm/images/marshall_ingwerson.jpg" /><br />
 <span style="width: 80px;" class="caption">Marshall Ingwerson<br />&copy; <i>Christian Science Monitor</i>
 </span></span><br />
 <span class="inline inline-left"><br />
-<img width="80" height="80" alt="" src="https://casestudies.jrn.columbia.edu/site/csm/sites/files/csm/images/david_clark_scott.jpg" /><br />
+<img width="80" height="80" alt="" src="../../files/csm/images/david_clark_scott.jpg" /><br />
 <span style="width: 80px;" class="caption">David Scott<br />&copy; <i>Christian Science Monitor</i>
 </span></span></p>
 <p>A blackout would offer other benefits. News stories might inadvertently contradict what Carroll was telling her captors; an embargo would at least postpone that. Perhaps she had given them a false name, pretended not to know Arabic or claimed to be a non-American. Ingwerson calculated that less attention would create some breathing space in case the kidnappers demanded ransom or, better yet&mdash;ignorant that they had captured a US reporter&mdash;released her unharmed.</p>
