--- a/casestudies/129/casestudy/www/layout/case_id_129_id_911.html
+++ b/casestudies/129/casestudy/www/layout/case_id_129_id_911.html
@@ -271,7 +271,7 @@ font-style:italic;
 	<hr align="left" size="1" width="33%" />
 	<div id="ftn1">
 		<p>
-			<span style="font-size:11px;"><a href="case_id_129_id_911.html#_ftnref1" name="_ftn1" title="">[6]</a>&nbsp;&ldquo;Internet Timeline | FactMonster.com,&rdquo; accessed April 29, 2014, <a href="https://casestudies.jrn.columbia.edu/casestudy/www/layout/www.factmonster.com/ipka/A0193167.html">http//www.factmonster.com/ipka/A0193167.html</a></span></p>
+			<span style="font-size:11px;"><a href="case_id_129_id_911.html#_ftnref1" name="_ftn1" title="">[6]</a>&nbsp;&ldquo;Internet Timeline | FactMonster.com,&rdquo; accessed April 29, 2014, <a href="http://www.factmonster.com/ipka/A0193167.html">http://www.factmonster.com/ipka/A0193167.html</a></span></p>
 	</div>
 	<div id="ftn2">
 		<p>
