--- a/casestudies/1/casestudy/www/layout/case_id_1.html
+++ b/casestudies/1/casestudy/www/layout/case_id_1.html
@@ -333,12 +333,12 @@ font-style:italic;
     <h2 class="title">System menu</h2>
     <div class="content">
 <ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
+<li class="leaf"><a href="http://www.journalism.columbia.edu">Â© 2012 Columbia University Graduate School of Journalism</a></li>
 
 </ul>
 </div>
  </div>
-			</div><!-- id="footer-inner" -->
+			</div><!-- id="footer-inner"  -->
 
 </div><!-- id="footer" -->
 
