--- a/casestudies/2/casestudy/www/layout/case_id_2_id_74.html
+++ b/casestudies/2/casestudy/www/layout/case_id_2_id_74.html
@@ -385,10 +385,8 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 try {
 var pageTracker = _gat._getTracker("UA-51144540-10");
 pageTracker._trackPageview();
-} catch(err) {}</script>
+} catch(err) {}
+</script>
 
 </body>
 </html>
-dy>
-</html>
-html>
