--- a/casestudies/37/casestudy/www/layout/case_id_37.html
+++ b/casestudies/37/casestudy/www/layout/case_id_37.html
@@ -3,43 +3,35 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 
-
 <head>
-  <title>A Matter of Opinion: The Oregonian Editorial Board and Sam Adams | A Matter of Opinion: The Oregonian Editorial Board and Sam Adams 
+  <title>
+  A Matter of Opinion: The Oregonian Editorial Board and Sam Adams | A Matter of Opinion: The Oregonian Editorial Board and Sam Adams 
   </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
+  <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
+  <style type="text/css" media="all">@import "css_global/node/node.css";</style>
+  <style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
+  <style type="text/css" media="all">@import "css_global/system/system.css";</style>
+  <style type="text/css" media="all">@import "css_global/user/user.css";</style>
+  <style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
+  <style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
+  <style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
+  <script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
+  <script type="text/javascript" src="js/img_assist.js"></script>
+  <script type="text/javascript" src="js/audioimage.js"></script>
+  <script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
+  <script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
+  <script type="text/javascript" src="swfobject.js"></script> 
+  <script type="text/javascript">
+    var GB_ROOT_DIR = "com/greybox/";
+  </script>
+  <script type="text/javascript" src="com/greybox/AJS.js"></script>
+  <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
+  <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
+  <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
 	
-
-
-    <script type="text/javascript">
+  <script type="text/javascript">
       var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
@@ -48,7 +40,7 @@
           return false;
         });
       });
-    </script>
+  </script>
 
 
 <script type="text/javascript">
@@ -100,104 +92,26 @@ font-style:italic;
 </div><!-- id="header" -->
 
 
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
 <div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
+<!-- Left sidebar --><div id="sidebar-left">
+  <div class="block block-menu" id="block-menu-63">
     <h2 class="title">Sections</h2>
     <div class="content">
 <ul class="menu">
-
-
-
-<li class="leaf"><a  class="active"  href="case_id_37.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_37_id_456.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_37_id_457.html">The <i>Oregonian</i> editorial board</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_37_id_458.html">Oregon politics</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_37_id_459.html">Sam Adams</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_37_id_460.html">The Election</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_37_id_461.html">Another Scoop for <i>Willamette Week</i></a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_37_id_462.html">Call to Resign?</a>
-
-
-
-
-
-</li>
-
-
+<li class="leaf"><a  class="active"  href="case_id_37.html">Title Page</a></li>
+<li class="leaf"><a  href="case_id_37_id_456.html">Introduction</a></li>
+<li class="leaf"><a  href="case_id_37_id_457.html">The <i>Oregonian</i> editorial board</a></li>
+<li class="leaf"><a  href="case_id_37_id_458.html">Oregon politics</a></li>
+<li class="leaf"><a  href="case_id_37_id_459.html">Sam Adams</a></li>
+<li class="leaf"><a  href="case_id_37_id_460.html">The Election</a></li>
+<li class="leaf"><a  href="case_id_37_id_461.html">Another Scoop for <i>Willamette Week</i></a></li>
+<li class="leaf"><a  href="case_id_37_id_462.html">Call to Resign?</a></li>
 </ul>
 </div>
- </div>
+</div>
 
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
+<div class="block block-block" id="block-block-1">
+  <h2 class="title"></h2>
 
 	
     <div class="content"><div class="content">
@@ -207,29 +121,19 @@ font-style:italic;
 </ul>
 </div>
 </div>
-
-
  </div>
 	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
+		<!-- Main content of page -->
 	
 	<div id="contentbody" class="two-column" >
 				
 		<div id="main">
 		<div class="breadcrumb"><a href="case_id_37.html">Home</a> 
-		
-		
-		
-		
+	
 		</div>		
 		<h1 class="title">A Matter of Opinion: The <i>Oregonian</i> Editorial Board and Sam Adams</h1>
 		
-		
-		
-		<div class="tabs"></div>
-
-		
+		<div class="tabs"></div>	
 	  <div class="node">
     <span class="taxonomy"></span>
     <div class="content"><p>
@@ -308,6 +212,3 @@ pageTracker._trackPageview();
 
 </body>
 </html>
-html>
-
-html>
