formating non brokent page for ease of comparison

--- a/casestudies/50/casestudy/www/layout/case_id_50_id_521.html
+++ b/casestudies/50/casestudy/www/layout/case_id_50_id_521.html
@@ -100,200 +100,34 @@ font-style:italic;
 </div><!-- id="header" -->
 
 
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
 <div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
+<!-- Left sidebar --><div id="sidebar-left">
+<div class="block block-menu" id="block-menu-63">
+<h2 class="title">Sections</h2>
+<div class="content">
 <ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_50.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_50_id_504.html">Introducci&oacute;n</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_50_id_505.html">Paul Schaefer</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_50_id_506.html">Schaefer y las autoridades chilenas</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_50_id_507.html">CONTACTO</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_50_id_508.html">Indicios hacia Argentina</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_50_id_509.html">Chivilcoy</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_50_id_510.html">&iquest;Se justifica ir encubierto?</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_50_id_511.html">Profundizando en la Investigaci&oacute;n</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_50_id_512.html">Hugo Placente</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_50_id_513.html">Gente peligrosa</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_50_id_514.html">El Segundo Viaje&#8212;a Desenmascarar</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_50_id_515.html">El dilema de la c&aacute;mara oculta</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_50_id_516.html">Encubierto en Chivilcoy</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_50_id_517.html">¿Polic&iacute;as y ladrones?</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_50_id_518.html">Dudas en Santiago</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_50_id_519.html">La Solita</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_50_id_520.html">Un avance</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  class="active"  href="case_id_50_id_521.html">&iquest;Sin Alternativas?</a>
-
-
-
-
-
-</li>
-
-
+<li class="leaf"><a  href="case_id_50.html">Title Page</a></li>
+<li class="leaf"><a  href="case_id_50_id_504.html">Introducci&oacute;n</a></li>
+<li class="leaf"><a  href="case_id_50_id_505.html">Paul Schaefer</a></li>
+<li class="leaf"><a  href="case_id_50_id_506.html">Schaefer y las autoridades chilenas</a></li>
+<li class="leaf"><a  href="case_id_50_id_507.html">CONTACTO</a></li>
+<li class="leaf"><a  href="case_id_50_id_508.html">Indicios hacia Argentina</a></li>
+<li class="leaf"><a  href="case_id_50_id_509.html">Chivilcoy</a></li>
+<li class="leaf"><a  href="case_id_50_id_510.html">&iquest;Se justifica ir encubierto?</a></li>
+<li class="leaf"><a  href="case_id_50_id_511.html">Profundizando en la Investigaci&oacute;n</a></li>
+<li class="leaf"><a  href="case_id_50_id_512.html">Hugo Placente</a></li>
+<li class="leaf"><a  href="case_id_50_id_513.html">Gente peligrosa</a></li>
+<li class="leaf"><a  href="case_id_50_id_514.html">El Segundo Viaje&#8212;a Desenmascarar</a></li>
+<li class="leaf"><a  href="case_id_50_id_515.html">El dilema de la c&aacute;mara oculta</a></li>
+<li class="leaf"><a  href="case_id_50_id_516.html">Encubierto en Chivilcoy</a></li>
+<li class="leaf"><a  href="case_id_50_id_517.html">¿Polic&iacute;as y ladrones?</a></li>
+<li class="leaf"><a  href="case_id_50_id_518.html">Dudas en Santiago</a></li>
+<li class="leaf"><a  href="case_id_50_id_519.html">La Solita</a></li>
+<li class="leaf"><a  href="case_id_50_id_520.html">Un avance</a></li>
+<li class="leaf"><a  class="active"  href="case_id_50_id_521.html">&iquest;Sin Alternativas?</a></li>
 </ul>
 </div>
- </div>
+</div>
 
   <div class="block block-block" id="block-block-1">
     <h2 class="title"></h2>
@@ -385,12 +219,10 @@ font-style:italic;
 
 </ul>
 </div>
- </div>
-			</div><!-- id="footer-inner" -->
+</div>
+</div><!-- id="footer-inner" -->
 
 </div><!-- id="footer" -->
-
-
 
 </div><!-- id="container" -->
 
@@ -406,6 +238,3 @@ pageTracker._trackPageview();
 
 </body>
 </html>
-html>
-
-html>
