--- a/casestudies/53/casestudy/www/layout/case_id_53_id_540.html
+++ b/casestudies/53/casestudy/www/layout/case_id_53_id_540.html
@@ -1,20 +1,14 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
 <head>
   <title>Use or ignore? | The Facebook Conundrum: The New Haven Independent and the Annie Le Murder
 	- A Journalism Case Study
-
   </title>
  
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
+<style type="text/css" media="all">@import "css_global/book/book.css";</style>
 <style type="text/css" media="all">@import "css_global/node/node.css";</style>
 <style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
 <style type="text/css" media="all">@import "css_global/system/system.css";</style>
@@ -28,30 +22,23 @@
 <script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
 <script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
 <script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
-      $(document).ready(function(){
-        $("a.greybox").click(function(){
+<script type="text/javascript">
+  var GB_ROOT_DIR = "com/greybox/";
+</script>
+<script type="text/javascript" src="com/greybox/AJS.js"></script>
+<script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
+<script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
+<link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
+<script type="text/javascript">
+   var GB_ANIMATION = true;
+   $(document).ready(function(){
+      $("a.greybox").click(function(){
           var t = this.title || this.innerHTML || this.href;
           GB_show(t,this.href,600,800);
           return false;
         });
       });
-    </script>
-
+</script>
 
 <script type="text/javascript">
     $(function() {
@@ -101,140 +88,55 @@ font-style:italic;
       
 </div><!-- id="header" -->
 
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
 <div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
+	<!-- Left sidebar -->
+	<div id="sidebar-left">
 		  <div class="block block-menu" id="block-menu-63">
     <h2 class="title">Sections</h2>
     <div class="content">
 <ul class="menu">
 
-
-
 <li class="leaf"><a  href="case_id_53.html">Title Page</a>
-
-
-
-
-
 </li>
-
-
 <li class="leaf"><a  href="case_id_53_id_534.html">Introduction</a>
-
-
-
-
-
 </li>
-
-
 <li class="leaf"><a  href="case_id_53_id_535.html">The New Haven <i>Independent</i></a>
-
-
-
-
-
 </li>
-
-
 <li class="leaf"><a  href="case_id_53_id_536.html">Annie Le Missing</a>
-
-
-
-
-
 </li>
-
-
 <li class="leaf"><a  href="case_id_53_id_537.html">A Murder Story</a>
-
-
-
-
-
 </li>
-
-
 <li class="leaf"><a  href="case_id_53_id_538.html">A fianc&eacute;e and an ex-girlfriend</a>
-
-
-
-
-
 </li>
-
-
 <li class="leaf"><a  href="case_id_53_id_539.html">Ethics in the Facebook Age</a>
-
-
-
-
-
 </li>
-
-
 <li class="leaf"><a  class="active"  href="case_id_53_id_540.html">Use or ignore?</a>
-
-
-
-
-
 </li>
-
-
 </ul>
 </div>
- </div>
+</div>
 
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
+<div class="block block-block" id="block-block-1">
+<h2 class="title"></h2>
+<div class="content"><div class="content">
 <ul class="menu">
 <li class="printpdf">
 <a href="../../files/global/53/New&#32;Haven&#32;Independent&#32;Text.pdf" target="_blank">Download this case as a PDF</a></li>
 </ul>
 </div>
 </div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_53.html">Home</a> 
-		
-		
-		
-		
-		</div>		
-		<h1 class="title">Use or ignore?</h1>
-		
-		
-		
-		<div class="tabs"></div>
-
-		
-	  <div class="node">
-    <span class="taxonomy"></span>
-    <div class="content">
+</div>
+</div><!-- id="sidebar-left" -->
+<!-- Main content of page -->
+<div id="contentbody" class="three-column" >
+<div id="main">
+<div class="breadcrumb"><a href="case_id_53.html">Home</a> 
+</div>		
+<h1 class="title">Use or ignore?</h1>
+<div class="tabs"></div>
+<div class="node">
+<span class="taxonomy"></span>
+<div class="content">
 <p>
 	The questions raised by Voinov&rsquo;s Facebook post&mdash;which Bass didn&rsquo;t ponder until after the fact&mdash;were similar to the ones raised by Del Rocco&rsquo;s Facebook posts. For the <i>Independent</i>, the Voinov story was, Bass says, &ldquo;the closest thing to a precedent.&rdquo; But there were significant differences. Del Rocco, unlike Voinov, was tangential to the primary story. She was also alive. Plus Bailey knew that the information had been accessible only to Del Rocco&rsquo;s &ldquo;friends.&rdquo; On the other hand, Del Rocco had given Bailey access by accepting her friend request, and she had kept Bailey as a friend even though she knew Bailey was a journalist writing about Raymond Clark.</p>
 <p>
@@ -252,33 +154,24 @@ font-style:italic;
 <a href="case_id_53_id_539.html" class="page-previous" title="Go to previous page">&#171;&#160;Ethics in the Facebook Age</a>
 
 </div>
-</div></div>
-
-      </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
+</div>
+</div>
+</div>
+</div><!-- id="main" -->
+</div><!-- id="contentbody" -->
+<!-- Right sidebar for Bios -->
+<div id="sidebar-right">
+<div class="block block-menu" id="block-menu-65">
+<h2 class="title">Biographies</h2>
+<div class="content">
 <ul class="menu">
-
 <li class="leaf"><a  href="case_id_53_id_139_c_bio.html">Paul&nbsp;Bass</a></li>
-
 <li class="leaf"><a  href="case_id_53_id_140_c_bio.html">Melissa&nbsp;Bailey</a></li>
-
-
 </ul>
 </div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
+</div>
+</div><!-- id="sidebar-right" -->
+<div class="visualclear"></div>
 </div><!-- id="pagebody" -->
 
 
@@ -314,6 +207,3 @@ pageTracker._trackPageview();
 
 </body>
 </html>
-html>
-
-html>
