update html5 audio

--- a/casestudies/109/casestudy/www/layout/case_id_109_id_745.html
+++ b/casestudies/109/casestudy/www/layout/case_id_109_id_745.html
@@ -304,9 +304,15 @@ font-style:italic;
 		Hab&iacute;amos llegado a conocer a Julian bien, nos gustaba y confi&aacute;bamos en &eacute;l. S&oacute;lo a nivel personal era bastante impresionante lo que hab&iacute;a hecho... &Eacute;l pensaba que ten&iacute;a ese poder sobre nosotros, y que ten&iacute;a tanta informaci&oacute;n espectacular y jugosa, que no importaba mucho cu&aacute;nto enga&ntilde;aba, si era deshonesto, o cu&aacute;ntos acuerdos romp&iacute;a.</p>
 </blockquote>
 <blockquote>
-	<p>
+  <p>
 		<i>Listen to Davies describe the </i>Guardian<i>&rsquo;s initial relationship with Assange.</i><br />
-		<img alt="" border="0" class="audiofile" src="../../files/audios/186/Davies&#32;text&#32;quote.mp3" /></p>
+		<!-- <img alt="" border="0" class="audiofile" src="../../files/audios/186/Davies&#32;text&#32;quote.mp3" /> -->
+		<audio controls>
+          <source src="../../files/audios/186/Davies&#32;text&#32;quote.mp3" type="audio/mpeg">
+        </audio>
+
+  </p>
+		
 </blockquote>
 <p>
 	Asignaron a Davies otro trabajo absorbente e inmediato, y decidi&oacute; retirarse del proyecto Wikileaks para mostrar su desaprobaci&oacute;n. Nunca volvi&oacute; a hablar con Assange. Davies quiso enviarle un mensaje: &ldquo;No. No somos tus siervos. No estamos aqu&iacute; para que las fuentes de informaci&oacute;n abusen de nosotros. Nosotros somos periodistas. No vamos a movernos siguiendo la cola del perro&rdquo;. El episodio cambi&oacute; adem&aacute;s la actitud de Leigh. A partir de ahora, se podr&iacute;a suponer que &ldquo;estabamos tratando con una persona indigna de confianza&quot;.</p>
