--- a/casestudies/109/casestudy/www/layout/case_id_109_id_747.html
+++ b/casestudies/109/casestudy/www/layout/case_id_109_id_747.html
@@ -291,7 +291,11 @@ font-style:italic;
 <blockquote>
 	<p>
 		<i>Listen to Leigh talk about taking matters into his own hands.</i><br />
-		<img alt="" border="0" class="audiofile" src="../../files/audios/183/Leigh&#32;text&#32;quote.mp3" /></p>
+		<!-- <img alt="" border="0" class="audiofile" src="../../files/audios/183/Leigh&#32;text&#32;quote.mp3" /> -->
+		<audio controls>
+          <source src="../../files/audios/183/Leigh&#32;text&#32;quote.mp3" type="audio/mpeg">
+        </audio>
+</p>
 </blockquote>
 <p>
 	Mientras tanto, Leigh tambi&eacute;n fue a ver a Assange en el Frontline Club de Londres, donde estaba viviendo, y le dijo que Brooke ten&iacute;a los cables y que <em>The Guardian</em> quer&iacute;a publicarlos r&aacute;pido. &ldquo;Julian hab&iacute;a dicho: OK, lo entiendo. Estoy en cierto modo perdiendo el control de esto... Julian estaba relativamente tranquilo ante la situaci&oacute;n&quot;, recuerda Leigh. Assange acept&oacute; que <em>The Guardian</em> pudiera dar los cables a <em>Der Spiegel.</em></p>
