--- a/casestudies/109/casestudy/www/layout/case_id_109_id_748.html
+++ b/casestudies/109/casestudy/www/layout/case_id_109_id_748.html
@@ -281,7 +281,11 @@ font-style:italic;
 <blockquote>
 	<p>
 		<i>Listen to Katz distinguish between the </i>Guardian<i>&rsquo;s expectations and Assange&rsquo;s.</i><br />
-		<img alt="" border="0" class="audiofile" src="../../files/audios/188/Katz&#32;text&#32;quote.mp3" /></p>
+		<!-- <img alt="" border="0" class="audiofile" src="../../files/audios/188/Katz&#32;text&#32;quote.mp3" /> -->
+		<audio controls>
+          <source src="../../files/audios/188/Katz&#32;text&#32;quote.mp3" type="audio/mpeg">
+        </audio>
+	</p>
 </blockquote>
 <p>
 	Era la primera vez que Rusbridger hab&iacute;a pasado alg&uacute;n tiempo con Assange. El director asegur&oacute; a Assange que &eacute;l personalmente no hab&iacute;a dado nada al <em>Times</em>. Assange le amenaz&oacute; con demandarle. Le amenaz&oacute; con dejar de cooperar con <em>The Guardian</em>. Mencion&oacute; que ya estaba en conversaciones con <em>Washington Post</em> y <em>McClatchy Newspapers</em> sobre la publicaci&oacute;n de los cables en EE.UU. &quot;En realidad mi objetivo era s&oacute;lo calmarlo, porque -habiendo llegado tan lejos- habr&iacute;a sido inmensamente complicado que todos nos dividi&eacute;semos y &eacute;l se quedase fuera&rdquo;, afirma Rusbridger.</p>
@@ -296,7 +300,11 @@ font-style:italic;
 <blockquote>
 	<p>
 		<i>Listen to Rusbridger describe his discussion with Assange.</i><br />
-		<img alt="" border="0" class="audiofile" src="../../files/audios/184/Rusbridger&#32;text&#32;quote.mp3" /></p>
+		<!-- <img alt="" border="0" class="audiofile" src="../../files/audios/184/Rusbridger&#32;text&#32;quote.mp3" /> -->
+		<audio controls>
+          <source src="../../files/audios/184/Rusbridger&#32;text&#32;quote.mp3" type="audio/mpeg">
+        </audio>
+	</p>
 </blockquote>
 <p>
 	Dos d&iacute;as despu&eacute;s, Assange acept&oacute; 10 puntos que Rusbridger le present&oacute;, incluyendo un calendario de publicaci&oacute;n que comenzaba el 29 de noviembre en forma impresa (la versi&oacute;n digital, el 28 de noviembre) durante dos semanas o m&aacute;s. Despu&eacute;s del 4 de enero, el contrato de exclusividad expirar&iacute;a y Wikileaks estar&iacute;a libre para enviar cables de inter&eacute;s regional a otros peri&oacute;dicos de todo el mundo. Assange decidi&oacute; tambi&eacute;n que Wikileaks publicar&iacute;a s&oacute;lo los cables redactados preparados por sus socios de los medios de comunicaci&oacute;n. Leigh, por su parte, se congratulaba: &quot;Yo pensaba que Alan [Rusbridger] hab&iacute;a actuado brillantemente al forjar un tipo de compromiso con el que todo el mundo podr&iacute;a vivir&hellip; pensaba que era un milagro que hubi&eacute;ramos llegado tan lejos. Yo siempre hab&iacute;a sospechado que este endeble acuerdo se derrumbar&iacute;a en pocas semanas&quot;.</p>
